# top-down-shooter

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  README.md  startScript.sh.in
.github/workflows/: ccmake-single-platform.yml  linter.yml  unit-tests.yml
include/: bullet.h  enemy.h  enemyManager.h  enemySpawner.h  gunData.h  player.h
include/enemies/: enemy.h  spider.h
include/engine/: Tree2D.h  animationData.h  camera.h  collision.h  game.h  gameObject.h  renderManager.h  resourceManager.h  scene.h  vector2D.h
include/engine/UI/: UIManager.h  anchorTypes.h  background.h  slider.h  widget.h
include/game/: 2DTree.h  Tree2D.h  animationData.h  collision.h  game.h  gameObject.h  renderManager.h  vector2D.h
include/game/UI/: UIManager.h  anchorTypes.h  background.h  canvas.h  slider.h  widget.h
include/scenes/: combat_map.h  combat_scene.h
include/terrain/: chunk.h  chunkManager.h  terrain.h  terrainCollider.h  terrainGenerator.h  terrainManager.h
lib/: SDL2.lib  SDL2_image.lib
lib/include/SDL2/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_cpuinfo.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_image.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mouse.h  SDL_mutex.h  SDL_name.h  SDL_opengl.h  SDL_opengl_glext.h  SDL_opengles.h  SDL_opengles2.h  SDL_opengles2_gl2.h  SDL_opengles2_gl2ext.h  (+37 more)
src/: bullet.cpp  enemy.cpp  enemyManager.cpp  enemySpawner.cpp  main.cpp  player.cpp
src/enemies/: enemy.cpp  spider.cpp
src/engine/: Tree2D.cpp  collision.cpp  game.cpp  gameObject.cpp  game_.cpp  renderManager.cpp  resourceManager.cpp  scene.cpp  vector2D.cpp
src/engine/UI/: UIManager.cpp  background.cpp  slider.cpp  widget.cpp
src/game/: 2DTree.cpp  Tree2D.cpp  collision.cpp  game.cpp  gameObject.cpp  renderManager.cpp  resourceManager.cpp  vector2D.cpp
src/game/UI/: UIManager.cpp  background.cpp  canvas.cpp  slider.cpp  widget.cpp
src/scenes/: combat_scene.cpp
src/terrain/: chunk.cpp  chunkManager.cpp  terrain.cpp  terrainCollider.cpp  terrainGenerator.cpp  terrainManager.cpp
test/: CMakeLists.txt  Tree2D_test.cpp  collision_test.cpp  mockGameObject.h  mockScene.h  terrain_test.cpp
